--- a/.github/workflows/github-actions-arvan.yml
+++ b/.github/workflows/github-actions-arvan.yml
@@ -22,32 +22,20 @@ jobs:
           with:
             fetch-depth: 0
   
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v3
-  
-        - name: Login to Docker Registry
-          uses: docker/login-action@v3
-          with:
-            registry: ${{ env.DOCKER_REGISTRY }}
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
+        - name: Login to docker
+          run: |
+                docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
         - name: Set outputs
           id: vars
           run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
         - name: Check outputs
           run: echo ${{ steps.vars.outputs.sha_short }}
-  
-  
-        - name: Build and push Landing Page Docker image
-          uses: docker/build-push-action@v6
-          with:
-            context: .
-            file: ./dockerfile
-            push: true
-            tags: |
-              ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ steps.vars.outputs.sha_short }}
 
+        - name: Docker build and push
+          run: |
+                docker build -t ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ steps.vars.outputs.sha_short }} . &&\
+                docker push ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ steps.vars.outputs.sha_short }}
         
         - name: Update ip-locator.yml with new image tag
           run: |
