--- a/.github/workflows/github-actions-arvan.yml
+++ b/.github/workflows/github-actions-arvan.yml
@@ -45,4 +45,4 @@ jobs:
         - name: Copy manifest to master and apply
           run: |
               scp ip-locator.yml ${{ secrets.K8S_USER }}@${{ secrets.K8S_MASTER_IP }}:/tmp/ip-locator.yml &&\
-              ansible-playbook -i ${{ secrets.K8S_MASTER_IP }}, apply-k8s.yml --user ${{ secrets.K8S_USER }}
+              ansible-playbook -i ${{ secrets.K8S_MASTER_IP }}, applyplay.yml --user ${{ secrets.K8S_USER }}
