--- a/ip-locator.yml
+++ b/ip-locator.yml
@@ -34,12 +34,12 @@ spec:
         - name: DB_USER
           valueFrom:
             secretKeyRef:
-              name: zalando.acid-minimal-cluster.credentials.postgresql.acid.zalan.do
+              name: postgres.acid-minimal-cluster.credentials.postgresql.acid.zalan.do
               key: username
         - name: DB_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: zalando.acid-minimal-cluster.credentials.postgresql.acid.zalan.do
+              name: postgres.acid-minimal-cluster.credentials.postgresql.acid.zalan.do
               key: password
         - name: DB_HOST
           valueFrom:
